--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                 <button class="blog-topic text-tiny">Music Production</button>
 
                 <h3>
-                  <a href="https://dev.to/mahmoudessam/python-challenge31-pl7" class="h3" target="_blank">Music Production and Audio Engineering</a>
+                  <a href="#" class="h3" target="_blank">Music Production and Audio Engineering</a>
                 </h3>
 
                 <p class="blog-text">
@@ -273,7 +273,7 @@
                 <button class="blog-topic text-tiny">Mixing</button>
 
                 <h3>
-                  <a href="https://dev.to/mahmoudessam/python-challenge31-pl7" class="h3" target="_blank">
+                  <a href="#" class="h3" target="_blank">
                     Dolby Atmos Mix</a>
                 </h3>
 
